--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,15 @@ body {
   .navbar-dark .navbar-nav .nav-link:hover {
     transform: scale(1.15);
   }
+  #about-us{
+    padding-top: 70px;
+  }
+  #services{
+    padding-top: 100px;
+  }
+  #team{
+    padding-top: 100px;
+  }
 }
 /*medium and small screens */
 @media (max-width: 992px) {
@@ -32,5 +41,14 @@ body {
   .navbar-dark .navbar-nav .nav-link {
     padding: 10px 0;
     margin-left: 0;
+  }
+  #about-us {
+    padding-top: 350px;
+  }
+  #services{
+    padding-top: 350px;
+  }
+  #team{
+    padding-top: 350px;
   }
 }
