--- a/css/style.css
+++ b/css/style.css
@@ -73,5 +73,17 @@ body {
     height: 100%;
     border: 0;
 }
+/* for accessibility purposes */
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
 
 
