--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,17 @@ body {
 }
 /* hero section */
 .phone-link:hover {
-    color: #1B9EDA; 
-    transition: color 0.3s; 
+  color: #1b9eda;
+  transition: color 0.3s;
 }
 .email-link {
-    text-decoration: none;
-    color: black; 
+  text-decoration: none;
+  color: black;
 }
 
 .email-link:hover {
-    color: #1B9EDA; 
-    transition: color 0.3s;
+  color: #1b9eda;
+  transition: color 0.3s;
 }
 
 /* Set the default color of the links */
@@ -36,78 +36,81 @@ body {
   .navbar-dark .navbar-nav .nav-link:hover {
     transform: scale(1.15);
   }
-  #about-us{
+  #about-us {
     padding-top: 70px;
   }
-  #services{
+  #services {
     padding-top: 70px;
   }
-  #team{
+  #team {
     padding-top: 70px;
   }
-  #booking{
+  #booking {
     padding-top: 40px;
   }
 }
 /* Medium and small screens */
 @media (max-width: 992px) {
-    .navbar-dark .navbar-collapse {
-      margin-top: 15px;
-      border-top: 1px solid rgba(255, 255, 255, 0.3);
-    }
-    .navbar-dark .navbar-nav .nav-link {
-      padding: 10px 0;
-      margin-left: 0;
-    }
-    body.navbar-collapsed #about-us {
-      padding-top: 320px;
-    }
-    body.navbar-collapsed #services {
-      padding-top: 310px;
-    }
-    body.navbar-collapsed #team {
-      padding-top: 300px;
-    }
-    body.navbar-collapsed #booking {
-      padding-top: 300px;
-    }
-    .welcome{
-        text-align: center;
-    }
-    .phone_email{
-        display: flex;
-        justify-content: center;
-    }
+  .navbar-dark .navbar-collapse {
+    margin-top: 15px;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
   }
-  
-  
+  .navbar-dark .navbar-nav .nav-link {
+    padding: 10px 0;
+    margin-left: 0;
+  }
+  body.navbar-collapsed #about-us {
+    padding-top: 320px;
+  }
+  body.navbar-collapsed #services {
+    padding-top: 310px;
+  }
+  body.navbar-collapsed #team {
+    padding-top: 300px;
+  }
+  body.navbar-collapsed #booking {
+    padding-top: 300px;
+  }
+  .welcome {
+    text-align: center;
+  }
+  .phone_email {
+    display: flex;
+    justify-content: center;
+  }
+}
+/* Medium and small screens */
+@media (max-width: 768px) {
+  .phone_email {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 /* for smaller screen size */
 .map-responsive {
-    position: relative;
-    overflow: hidden;
-    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 
 .map-responsive iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 /* for accessibility purposes */
 .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
-
-
-
-
